# ktools

./: README.md  package.json  pnpm-lock.yaml  tsconfig.json  vite.config.ts
assets/: default.ts
components/: index.ts  kt-components.less
components/button/: index.less  index.tsx
components/color-picker/: index.less  index.tsx  utils.ts
components/input-number/: index.less  index.tsx
components/message/: index.less  index.tsx
components/modal/: index.less  index.tsx
components/select/: index.less  index.tsx
components/shortcut/: index.less  index.tsx
components/switch/: index.less  index.tsx
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: desktop.json
src-tauri/plugins/kt-style/: plugin.json  style.css  style.js
src-tauri/src/: lib.rs  main.rs  setup.rs
src-tauri/src/command/: mod.rs  novel.rs  plugin.rs
src-tauri/src/model/: config.rs  mod.rs  novel.rs
styles/: font.less  global.less
typings/: components.d.ts  config.d.ts  plugin.d.ts
utils/: config.ts  emiter.ts  hotkey.ts  novel.ts  plugin.ts  preload.ts  utils.ts
windows/novel/: index.html  main.tsx
windows/novel/pages/novel/: index.less  index.tsx
windows/novel/styles/: index.less
windows/setting/: index.html  main.tsx
windows/setting/constants/: index.ts
windows/setting/layout/: index.less  index.tsx
windows/setting/pages/preview/: index.less  index.tsx
windows/setting/pages/setting/: index.less  index.tsx
windows/setting/router/: router.tsx
