[package]
name = "ktools"
version = "0.1.0"
description = "A Tauri App"
authors = ["you"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
# The `_lib` suffix may seem redundant, but it is necessary
# to make the lib name unique and wouldn't conflict with the bin name.
# This seems to be only an issue on Windows, see https://github.com/rust-lang/cargo/issues/8519
name = "ktools_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2.2.0", features = [] }

[dependencies]
tauri = { version = "2.5.1", features = ["tray-icon", "image-ico"] }
tauri-plugin-shell = "2.2.1"
tauri-plugin-single-instance = "2.2.4"
tauri-plugin-fs = "2.3.0"
tauri-plugin-global-shortcut = "2.2.1"
tauri-plugin-dialog = "2.2.2"
tauri-plugin-window-state = "2.2.2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
regex = "1.11.1"

